# heaperativo

./: .gitignore  CMakeLists.txt  README.md  bootstrap.sh
include/heaperativo/: heap.h  heap.hpp  node.h  node.hpp  process.h  process.hpp  queue.h  queue.hpp  unix_program.hpp
sources/: main.cpp
sources/heaperativo/: heap.cpp  process.cpp  queue.cpp  unix_program.cpp
